argocd/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beyond-tutorial
  namespace: beyond-tutorial
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: beyond-tutorial
