argocd/app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: beyond-tutorial
  namespace: beyond-tutorial
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: beyond-tutorial
